# dimedbpy

./: .gitignore  .travis.yml  MANIFEST  README.md  requirements.txt  setup.cfg  setup.py
dimedbpy/: Metabolite.py  __init__.py  metabolite.py  methods.py
docs/: Makefile  make.bat
docs/source/: .index.rst.swp  conf.py  index.rst
tests/: tests.py
