[metadata]
name = dimedbpy
author = Keiron OShea
description = Python wrapper for DIMEdbs REST API.
version = 0.1.2
url = https://github.com/AberystwythSystemsBiology/dimedbpy
keywords =
  metabolomics
  omics
  processing
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Bio-Informatics
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Operating System :: OS Independent
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
[options]
python_requires = >= 3
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
